[package]
name = "open-coroutine-core-v3"
version = "0.1.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic coroutine library."
repository = "https://github.com/acl-dev/open-coroutine"
keywords = ["runtime", "coroutine", "fiber", "stackful", "stackless", "hook", "preempt", "work-steal"]
categories = ["data-structures", "concurrency", "asynchronous", "web-programming", "wasm"]
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
cfg-if = "1.0.0"
corosensei = { version = "0.1.3", optional = true }

[target."cfg(unix)".dependencies]
libc = "0.2.140"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[build-dependencies]
cfg-if = "1.0.0"
cc = { version = "1.0.73", optional = true }
rustversion = { version = "1.0.6", optional = true }

[features]
default = ["setjmp"]
boost = ["cc", "rustversion"]
setjmp = ["cc", "rustversion"]
korosensei = ["corosensei"]
