[package]
name = "open-coroutine-core-v3"
version = "0.1.0"
edition = "2021"
authors = ["zhangzicheng@apache.org"]
description = "The open-coroutine is a simple, efficient and generic coroutine library."
repository = "https://github.com/acl-dev/open-coroutine"
keywords = ["runtime", "coroutine", "fiber", "stackful", "stackless", "hook", "preempt", "work-steal"]
categories = ["data-structures", "concurrency", "asynchronous", "web-programming", "wasm"]
license = "LGPL-3.0 OR Apache-2.0"

[dependencies]
cfg-if = "1.0.0"
uuid = { version = "1.3.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
once_cell = "1.13.0"
corosensei = { version = "0.1.3", optional = true }
open-coroutine-queue = { version = "0.1.2", path = "open-coroutine-queue" }

[target."cfg(unix)".dependencies]
libc = "0.2.140"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[build-dependencies]
cfg-if = "1.0.0"
cc = { version = "1.0.73", optional = true }
rustversion = { version = "1.0.6", optional = true }

[dev-dependencies]
backtrace = "0.3.67"

[workspace]
members = ["open-coroutine-queue"]

[features]
default = ["setjmp"]
boost = ["cc", "rustversion"]
setjmp = ["cc", "rustversion"]
korosensei = ["corosensei"]
